@@ -1,5 +1,10 @@
 2009-03-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
+	* tests/test-portrait-win.c:
+	  Numerous enhancementes.
+
+2009-03-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
 	Task Navigation Specification 2.0 update.
 
 	NB#106694 Sometimes close button is not shown on the incoming event
